--- a/template/custom/sigme/header.html
+++ b/template/custom/sigme/header.html
@@ -20,6 +20,7 @@
         <!-- META -->
         <meta name="keywords" content="digital signage, signage, narrow-casting, xibo, open source, agpl, documentation" />
         <meta name="description" content="[[PRODUCTNAME]] is an open source digital signage solution. It supports all main media types and can be interfaced to other sources of data using CSV, Databases or RSS." />
+        <script src=”https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js”></script>
     </head>
     <body data-toc="[[TOCNAME]]">
         <!-- Copyright 2020 Xibo Signage Ltd. Part of the Xibo Open Source Digital Signage Solution. Released under the AGPLv3 or later. -->
