--- a/template/custom/sigme/footer.html
+++ b/template/custom/sigme/footer.html
@@ -51,5 +51,11 @@
                 }
             }
         </script>
+	<!-- JSファイルの読み込み -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/highlight.min.js"></script>
+	<script>
+	  // ハイライトを実行
+	  hljs.initHighlightingOnLoad();
+	</script>
     </body>
 </html>
