--- a/template/custom/sigme/header.html
+++ b/template/custom/sigme/header.html
@@ -17,6 +17,9 @@
 	<!-- Font Awsome -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
 
+	<!-- Code synax highlight -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/styles/dracula.min.css">
+
         <!-- META -->
         <meta name="keywords" content="digital signage, signage, narrow-casting, xibo, open source, agpl, documentation" />
         <meta name="description" content="[[PRODUCTNAME]] is an open source digital signage solution. It supports all main media types and can be interfaced to other sources of data using CSV, Databases or RSS." />
