update manual pages

--- a/template/custom/sigme/header.html
+++ b/template/custom/sigme/header.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
     <head>
-        <title>[[PRODUCTNAME]] ユーザーマニュアル</title>
+        <title>[[PRODUCTNAME]]管理者マニュアル</title>
         <meta name="viewport" content="width=device-width">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
@@ -40,8 +40,8 @@
                     </button>
                     <a href="/manual/ja/" class="navbar-brand"> ユーザーマニュアル</a>
                     <a href="#" class="navbar-brand"> 管理者マニュアル</a>
-                    <a href="../../manual/ja/" class="navbar-brand"> 開発者マニュアル</a>
-                    <a href="../../manual/ja/" class="navbar-brand"> クリエーターガイド</a>
+                    <a href="/dev-manual/ja/" class="navbar-brand"> 開発者マニュアル</a>
+                    <a href="/creator-guide/ja/" class="navbar-brand"> クリエーターガイド</a>
                 </div>
             
                 <div class="collapse navbar-collapse" id="ss-navbar">
